# lxsession

./: .gitignore  AUTHORS  COPYING  LXDE.desktop.in  LXSM-LXDE-Default  Makefile.am  Makefile.in  README  README.md  TODO  auth.c  autogen.sh  config.h.in  configure.ac  configure.ac.mine  configure.ac.r1198  desktop.conf.example  gdm-logout-action.c  gdm-logout-action.h  gl.po  info.c  lock.c  lxlock  lxsessión-gl.po  prop.c  prop.h  remote.c  restart.c  save.c  save.h  saveutil.c  saveutil.h  signals.c  startlxde.in  xsm.c  xsm.h
data/: Makefile.am  conffiles.conf.example  desktop.conf.example  lxpolkit.desktop.in.in  lxsession-default-apps.desktop.in  lxsession-edit.desktop.in
data/ui/: Makefile.am  lxpolkit.ui  lxsession-default-apps.ui  lxsession-edit.ui
debian/: NEWS  changelog  com.ubuntu.update-notifier.gschema.xml  control  copyright  lxpolkit.install  lxsession-data.install  lxsession-default-apps.install  lxsession-default-apps.manpages  lxsession-edit.install  lxsession-logout.install  lxsession-logout.manpages  lxsession-message-gtk.install  lxsession.examples  lxsession.install  lxsession.manpages  postinst  prerm  rules  watch
debian/patches/: 01_upower.patch  02_gdm3.patch  series
lock/: lxlock
lxclipboard/: Makefile.am  main.vala
lxlock/: Makefile.am  lxlock
lxpolkit/: Makefile.am  lxpolkit-listener.c  lxpolkit.c  lxpolkit.h  main.vala
lxsession/: Makefile.am  app.vala  auth.c  auth.h  autostart.c  autostart.h  autostart.vala  clipboard.c  clipboard.h  conffiles.vala  control.vala  dbus-common.vala  dbus-gnome-session.vala  dbus-lxde-session.vala  default-apps.c  default-apps.h  environement.vala  info.c  info.h  lock.c  lock.h  lxsession.c  lxsession.h  main.vala  misc.c  notifications.vala  options.c  options.vala  plugins.vala  printhex.c  prop.c  remote.c  restart.c  restart.h  save.c  save.h  saveutil.c  saveutil.h  settings-daemon.c  settings-daemon.h  (+7 more)
lxsession-db/: Makefile.am  desktop-files-backend.vala  main.vala
lxsession-default/: Makefile.am  lxsession-default  lxsession-default-terminal
lxsession-default-apps/: Makefile.am  autostart.vala  combobox.vala  dbus-backend.vala  main.vala  utils.vala
lxsession-edit/: Makefile.am  lxsession-edit-common.c  lxsession-edit.c
lxsession-logout/: Makefile.am  dbus-interface.c  dbus-interface.h  gdm-logout-action.c  gdm-logout-action.h  lock-screen.c  lock-screen.h  lock-screen.sh  lxsession-logout-dbus-interface.c  lxsession-logout-dbus-interface.h  lxsession-logout-dbus-interface.h.gch  lxsession-logout.c  lxsession-logout.c.orig  main.c
lxsession-message/: Makefile.am
lxsession-utils/: Makefile.am  lxsession-apt-check  lxsession-xsettings
lxsettings-daemon/: Makefile.am  main.vala  settings-daemon.c  xevent.h
man/: Makefile.am  lxclipboard.1  lxlock.1  lxpolkit.1  lxsession-db.1  lxsession-default-app.1  lxsession-default-apps.1  lxsession-default-terminal.1  lxsession-default.1  lxsession-edit.1  lxsession-logout.1  lxsession-logout.sgml  lxsession-logout.xml  lxsession-xdg-autostart.1  lxsession.1  lxsession.sgml  lxsession.xml  lxsettings-daemon.1
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lg.po  (+33 more)
polkit/: lxpolkit-listener.h  lxpolkit.c
session/: control.vala  process.vala
session-default/: lxsession-default
session-default-apps/: autostart.vala  main.vala
session-edit/: lxsession-edit-common.c  lxsession-edit-common.h
session-message/: main-gtk.vala
src/: Makefile.am  app.vala  autostart.vala  clipboard.c  clipboard.h  dbus-gnome-session.vala  dbus-lxde-session.vala  default-apps.c  default-handler.vala  lxsession.c  lxsession.h  main.vala  options.vala  options_old.h  settings-daemon.c  settings-daemon.h  settings.vala  utils.vala  xdg-autostart.c  xevent.c
vapi/: Makefile.am  config.vapi  lxclipboard.vapi  lxpolkit.vapi  lxsession-edit.vapi  lxsettings-daemon.vapi  settings-daemon.vapi  xdg-autostart.vapi
xdg-autostart/: Makefile.am  main.vala  xdg-autostart.c  xdg-autostart.h
